[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8.0",
]

[project]
name = "gluefix"
dynamic = ["version"]
dependencies = [
  "aiobotocore>2.4.1",
  "boto3>1.24.70",
  "botocore>1.27.59",
  "fsspec>2021.8.1",
  "patsy>0.5.1",
  "s3fs>2022.11.0",
  "s3transfer>0.6.0",
]

[project.urls]
homepage = "https://github.com/freenet-group/gluefix"
documentation = "https://github.com/freenet-group/gluefix/blob/main/README.md"
repository = "https://github.com/freenet-group/gluefix"
changelog = "https://github.com/freenet-group/gluefix/releases"

[tool.setuptools_scm]
version_file = "_version.py"
write_to_template = "__version__ = \"{version}\"\n"
